
2019-03-17  Simon Sobisch <simonsobisch@gnu.org>

	* tree.c: improved error handling for wrong PICTURE clause,
	  including a new warning for uncommon parentheses and
	  only error once for same invalid character
	* tree.c, tree.h, scanner.l, typeck.c, codegen.c, cobc.c: added compiler part for
	  floating-point numeric-edited item (libcob open)
	* parser.y: added parsing for PICTURE clause locale-format

2019-03-16  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y: added unqualified_word which consumes qualification
	  checking that it does not occur; used for INDEXED BY and OCCURS KEY
	* parser.y, tree.h, reserved.c, typeck.c: added parsing for
	  LOCALE/NATIONAL ALPHABET, NATIONAL COLLATING SEQUENCE and
	  COLLATING SEQUENCE OF key

2019-03-15  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: drop yacc-compatibility warnings via AM_YFLAGS -Wno-yacc
	  as only bison is supported in any case

2019-03-14  Simon Sobisch <simonsobisch@gnu.org>

	* config.c: hand-merged change 2015-04-27 with an option to go back,
	  see COBC_STORES_CONFIG_VALUES

2019-03-12  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, typeck: implemented table SORT without specifying key,
	  see Patch #42

2019-03-11  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_print_info): changed msgid for "file handler" and
	  already output if RTD-version of VB-ISAM is used (even if this
	  wouldn't work currently), partially after Ron Norman

2019-03-10  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, reserved.c: added RAISE statement as PENDING
	* parser.y: work on pending USE ON exception-name
	* parser.y, reserved.c, cobc.h, tree.h, typeck.c: added APPLY COMMIT clause
	  from 202x draft as PENDING (making I-O-CONTROL mandatory for its clauses)
	* typeck.c (cb_check_overlapping): do only the check, logic and messages
	  moved to (validate_move)
	* parser.y: minor refactoring

2019-03-09  Simon Sobisch <simonsobisch@gnu.org>
