@@ -1,6 +1,6 @@
 # GnuCOBOL compiler configuration
 #
-# Copyright (C) 2001-2012, 2014-2018 Free Software Foundation, Inc.
+# Copyright (C) 2001-2012, 2014-2019 Free Software Foundation, Inc.
 # Written by Keisuke Nishida, Roger While, Simon Sobisch, Edward Hart,
 # Ron Norman
 #
@@ -212,6 +212,7 @@ numeric-boolean:			ok
 hexadecimal-boolean:			ok
 national-literals:			ok
 hexadecimal-national-literals:		ok
+national-character-literals:		warning
 acu-literals:				unconformable
 word-continuation:			warning
 not-exception-before-exception:		ok
