@@ -1,6 +1,6 @@
 # GnuCOBOL compiler configuration
 #
-# Copyright (C) 2001-2012, 2014-2018 Free Software Foundation, Inc.
+# Copyright (C) 2001-2012, 2014-2019 Free Software Foundation, Inc.
 # Written by Keisuke Nishida, Roger While, Simon Sobisch, Edward Hart
 #
 # This file is part of GnuCOBOL.
@@ -91,6 +91,7 @@ numeric-boolean:			ok
 hexadecimal-boolean:			ok
 national-literals:			ok
 hexadecimal-national-literals:		ok
+national-character-literals:		+warning
 acu-literals:				ok
 word-continuation:			ok
 not-exception-before-exception:		+warning
