@@ -1,6 +1,6 @@
 # GnuCOBOL compiler configuration
 #
-# Copyright (C) 2001-2012, 2014-2018 Free Software Foundation, Inc.
+# Copyright (C) 2001-2012, 2014-2019 Free Software Foundation, Inc.
 # Written by Keisuke Nishida, Roger While, Simon Sobisch, Edward Hart,
 # Ron Norman
 #
@@ -206,6 +206,7 @@ numeric-boolean:			ok			# this can be changed by the BINLINT directive (default 
 hexadecimal-boolean:		unconformable
 national-literals:			ok
 hexadecimal-national-literals:		ok
+national-character-literals:		unconformable
 acu-literals:			ok
 word-continuation:			ok
 not-exception-before-exception:		unconformable
