@@ -1,6 +1,6 @@
 # GnuCOBOL compiler configuration
 #
-# Copyright (C) 2001-2012, 2014-2018 Free Software Foundation, Inc.
+# Copyright (C) 2001-2012, 2014-2019 Free Software Foundation, Inc.
 # Written by Keisuke Nishida, Roger While, Simon Sobisch, Edward Hart,
 # Ron Norman
 #
@@ -210,7 +210,8 @@ numeric-boolean:			unconformable
 hexadecimal-boolean:			unconformable
 national-literals:			unconformable
 hexadecimal-national-literals:		unconformable
-acu-literals:			unconformable  # TO-DO: Add config option for H"..."
+national-character-literals:		unconformable
+acu-literals:			unconformable  # TO-DO: Add separate config option for H"..."
 word-continuation:			ok
 not-exception-before-exception:		unconformable
 accept-display-extensions:		ok
