@@ -1,6 +1,6 @@
 # GnuCOBOL compiler configuration
 #
-# Copyright (C) 2001-2012, 2014-2018 Free Software Foundation, Inc.
+# Copyright (C) 2001-2012, 2014-2019 Free Software Foundation, Inc.
 # Written by Keisuke Nishida, Roger While, Simon Sobisch, Edward Hart,
 # Ron Norman
 #
@@ -212,6 +212,7 @@ numeric-boolean:			unconformable
 hexadecimal-boolean:			unconformable
 national-literals:			ok
 hexadecimal-national-literals:		unconformable
+national-character-literals:		unconformable
 acu-literals:				unconformable
 word-continuation:			obsolete	# even for literals (as it added concatenation of literals by &)!
 not-exception-before-exception:		unconformable
